<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/adapter_car_height">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/carImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W, 5:4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carTitle"
            style="@style/TextMedium.Primary.SingleLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:lines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/carImg"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="BMW, X6" />

        <TextView
            android:id="@+id/price"
            style="@style/TextBig.Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/carTitle"
            app:layout_constraintTop_toBottomOf="@+id/carTitle"
            tools:text="12331" />

        <TextView
            android:id="@+id/currency"
            style="@style/TextMedium.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/price"
            app:layout_constraintStart_toEndOf="@+id/price"
            tools:text="AED" />

        <TextView
            android:id="@+id/lotNum"
            style="@style/TextMedium.Primary.SingleLine"
            android:layout_marginEnd="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lotDivider"
            app:layout_constraintStart_toStartOf="@+id/carTitle"
            tools:text="123456" />

        <TextView
            android:id="@+id/lotNumTitle"
            style="@style/TextMedium.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lot_num"
            app:layout_constraintBottom_toTopOf="@+id/lotNum"
            app:layout_constraintStart_toStartOf="@+id/lotNum" />

        <View
            android:id="@+id/lotDivider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/divider"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/lotNum"
            app:layout_constraintEnd_toStartOf="@+id/bidsCount"
            app:layout_constraintStart_toEndOf="@+id/lotNum"
            app:layout_constraintTop_toTopOf="@+id/lotNumTitle" />

        <TextView
            android:id="@+id/bidsCount"
            style="@style/TextMedium.Primary.SingleLine"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/lotNum"
            app:layout_constraintEnd_toStartOf="@id/bidsDivider"
            app:layout_constraintStart_toEndOf="@+id/lotDivider"
            tools:text="1234" />

        <TextView
            android:id="@+id/bidsTitle"
            style="@style/TextMedium.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bids"
            app:layout_constraintBaseline_toBaselineOf="@+id/lotNumTitle"
            app:layout_constraintBottom_toTopOf="@+id/bidsCount"
            app:layout_constraintStart_toStartOf="@+id/bidsCount" />

        <View
            android:id="@+id/bidsDivider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="@+id/lotDivider"
            app:layout_constraintEnd_toStartOf="@+id/timeLeft"
            app:layout_constraintStart_toEndOf="@+id/bidsCount"
            app:layout_constraintTop_toTopOf="@+id/lotDivider" />

        <TextView
            android:id="@+id/timeLeft"
            style="@style/TextMedium.Primary.SingleLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/lotNum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bidsDivider"
            tools:text="12:34:22" />

        <TextView
            android:id="@+id/timeLeftTitle"
            style="@style/TextMedium.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            app:layout_constraintBaseline_toBaselineOf="@+id/lotNumTitle"
            app:layout_constraintBottom_toTopOf="@+id/timeLeft"
            app:layout_constraintStart_toStartOf="@+id/timeLeft" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>